modules/kubernetes-bookinfo/manifests/details.Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  namespace: ${namespace}
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: details
      containers:
        - name: details
          image: docker.io/istio/examples-bookinfo-details-v1:1.19.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
